[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Antony Redman <RumataYounger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.4"
pytest = "^7.2.1"
asyncpg = "^0.27.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.5"}
alembic = "^1.9.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.5"
fastapi-mail = "^1.2.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
